# naumachia-project-template

./: Cargo.toml  README.md  build.rs
my-scripts/: README.md  aiken.toml  plutus.json
src/: lib.rs  main.rs  scripts.rs
